[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Level/Main.gd" type="Script" id=1]
[ext_resource path="res://Levels/Opening.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imports/Swamp/1 Tiles/Tiles.tres" type="TileSet" id=4]
[ext_resource path="res://Imports/Swamp/3 Objects/Grass/1.png" type="Texture" id=5]
[ext_resource path="res://Imports/Swamp/3 Objects/Grass/3.png" type="Texture" id=6]
[ext_resource path="res://Imports/Swamp/3 Objects/Grass/5.png" type="Texture" id=7]
[ext_resource path="res://Imports/Swamp/3 Objects/Grass/4.png" type="Texture" id=8]
[ext_resource path="res://Imports/Swamp/3 Objects/Fence/3.png" type="Texture" id=9]
[ext_resource path="res://Imports/Swamp/3 Objects/Grass/10.png" type="Texture" id=10]
[ext_resource path="res://Imports/Text/Retry.PNG" type="Texture" id=11]
[ext_resource path="res://Imports/Text/Ending.PNG" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 16 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LevelContainer" type="Node" parent="."]
pause_mode = 1

[node name="Ending" type="Node2D" parent="LevelContainer"]

[node name="Background" parent="LevelContainer/Ending" instance=ExtResource( 3 )]

[node name="Buttons" type="Node2D" parent="LevelContainer/Ending"]

[node name="RetryButton" type="Area2D" parent="LevelContainer/Ending/Buttons"]
position = Vector2( 368, 472 )

[node name="RetryButton" type="Sprite" parent="LevelContainer/Ending/Buttons/RetryButton"]
position = Vector2( 99.1748, -1 )
scale = Vector2( 0.288265, 0.288265 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelContainer/Ending/Buttons/RetryButton"]
position = Vector2( 99.9307, 0.587402 )
shape = SubResource( 1 )

[node name="Ending" type="Sprite" parent="LevelContainer/Ending/Buttons"]
position = Vector2( 464, 376 )
scale = Vector2( 0.517247, 0.517247 )
texture = ExtResource( 12 )

[node name="StartGrass" type="Sprite" parent="LevelContainer/Ending"]
position = Vector2( 328, 416 )
texture = ExtResource( 6 )

[node name="11" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 112, 64 )
texture = ExtResource( 8 )

[node name="9" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 280, -6.5 )
texture = ExtResource( 6 )

[node name="8" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 272, 0 )
texture = ExtResource( 8 )

[node name="10" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 169.75, 64 )
texture = ExtResource( 10 )

[node name="4" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 176, 64 )
texture = ExtResource( 8 )

[node name="2" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 192, 0 )
texture = ExtResource( 5 )

[node name="3" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 232, -6 )
texture = ExtResource( 9 )

[node name="5" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 96, -6 )
texture = ExtResource( 6 )

[node name="6" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 40, -6.5 )
texture = ExtResource( 7 )

[node name="1" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 104, 64 )
texture = ExtResource( 5 )

[node name="7" type="Sprite" parent="LevelContainer/Ending/StartGrass"]
position = Vector2( 256, -6 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="LevelContainer/Ending"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 524294, 0, 3, 524295, 0, 4, 524296, 0, 4, 524297, 0, 4, 524298, 0, 4, 524299, 0, 4, 524300, 0, 4, 524301, 0, 4, 524302, 0, 4, 524303, 0, 4, 524304, 0, 4, 524305, 0, 4, 524306, 0, 4, 524307, 0, 4, 524308, 0, 4, 524309, 0, 4, 524310, 0, 5, 589830, 0, 65538, 589846, 0, 65536, 655366, 0, 65538, 655382, 0, 65536, 720902, 0, 65538, 720918, 0, 65536, 786438, 0, 65538, 786454, 0, 65536, 851974, 0, 65538, 851977, 0, 6, 851978, 0, 7, 851979, 0, 7, 851980, 0, 7, 851981, 0, 7, 851982, 0, 7, 851983, 0, 7, 851984, 0, 7, 851985, 0, 7, 851986, 0, 7, 851987, 0, 8, 851990, 0, 65536, 917510, 0, 65538, 917526, 0, 65536, 983046, 0, 65538, 983053, 0, 6, 983054, 0, 7, 983055, 0, 8, 983062, 0, 65536, 1048582, 0, 65538, 1048598, 0, 65536, 1114118, 0, 131075, 1114119, 0, 1, 1114120, 0, 1, 1114121, 0, 1, 1114122, 0, 1, 1114123, 0, 1, 1114124, 0, 1, 1114125, 0, 1, 1114126, 0, 1, 1114127, 0, 1, 1114128, 0, 1, 1114129, 0, 1, 1114130, 0, 1, 1114131, 0, 1, 1114132, 0, 1, 1114133, 0, 1, 1114134, 0, 131077 )

[node name="Camera" type="Camera2D" parent="LevelContainer/Ending"]
position = Vector2( 456, 416 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Opening" parent="LevelContainer" instance=ExtResource( 2 )]

[node name="Fade" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )
[connection signal="input_event" from="LevelContainer/Ending/Buttons/RetryButton" to="." method="_on_RetryButton_input_event"]
[connection signal="input_event" from="LevelContainer/Opening/Buttons/StartButton" to="." method="_on_StartButton_input_event"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_Fade_animation_finished"]

[editable path="LevelContainer/Opening"]
